--- a/pks-cluster-load-balancer.html.md.erb
+++ b/pks-cluster-load-balancer.html.md.erb
@@ -20,11 +20,11 @@ The example below explains how to create a load balancer for your cluster and us
 5. In the *TCP Load Balancing* pane, click **Start configuration**.
 6. Select the configuration details that apply to your use case and click **Continue**. The *New TCP load balancer* menu opens.
 7. Enter a **Name** for your load balancer and click **Backend configuration**. The *Backend configuration* panel opens.
-<p class="note">Configure a TCP Load Balancer with a human-readable name in lower case letters, such as <code>pks-cluster-api-1</code></p>.
+<p class="note"><strong>Note</strong>: Configure a TCP Load Balancer with a human-readable name in lower case letters, such as <code>pks-cluster-api-1</code>.</p>
 8. Configure the load balancer backend.
 	1. Select a **Region**.
 	1. Specify any other configuration options you require. 
-	<p class="note">When you configure the load balacner backend, health checks are not required.</p>
+	<p class="note"><strong>Note</strong>: When you configure the load balacner backend, health checks are not required.</p>
 9. Click **Frontend configuration**. The _Frontend Configuration_ panel opens.
 10. Configure the load balancer frontend.
 	1. Optional: Enter a human-readable name in lower case letters, such as `pks-cluster-api`. 
