--- a/pks-cluster-load-balancer.html.md.erb
+++ b/pks-cluster-load-balancer.html.md.erb
@@ -22,33 +22,32 @@ The example below explains how to create a load balancer for your cluster and us
 7. Enter a **Name** for your load balancer and click **Backend configuration**. The *Backend configuration* panel opens.
 <p class="note"><strong>Note</strong>: Configure a TCP Load Balancer with a human-readable name in lower case letters, such as <code>pks-cluster-api-1</code>.</p>
 8. Configure the load balancer backend.
-	1. Select a **Region**.
-	1. Specify any other configuration options you require. 
-	<p class="note"><strong>Note</strong>: When you configure the load balacner backend, health checks are not required.</p>
-9. Click **Frontend configuration**. The _Frontend Configuration_ panel opens.
+	1. Select an **Instance group**.
+	1. Specify any other configuration options you require and press **Done** to complete backend configuration. 
+	<p class="note"><strong>Note</strong>: When you configure the load balancer backend, health checks are not required.</p>
+9. Click **Frontend configuration**. The *Frontend Configuration* panel opens.
 10. Configure the load balancer frontend.
 	1. Optional: Enter a human-readable name in lower case letters, such as `pks-cluster-api`. 
-	1. Reserve an IP address by clicking into the **IP** menu and selecting **Create IP address**. Give the IP address a human-readable name and click **Reserve**. 
-	1. In the **Port** field, specify `8443`.
-	1. Click **Done**.
-11. Review your configuration and click **Create**.
+	1. Reserve an IP address by clicking into the **IP address** menu and selecting **Create IP address**. Give the IP address a human-readable name and click **Reserve**. 
+	1. In the **Port** field, specify `443` or `8443`.
+	1. Choose a **Certificate** from the list of certificates already associated with your installation.
+	1. Specify any other configuration options you require and press **Done** to complete frontend configuration. 
+11. Review your load balancer configuration and click **Create**.
 
 ##<a id="firewall"></a> Creating Firewall Rules for Load Balancers
 
+1. In the Google Cloud Platform sidebar menu, select **VPC Network** > **Firewall Rules**.
+1. Click **Create Firewall Rule**. The *Create a firewall rule* menu opens.
+1. Give your firewall rule a name that matches the VPC network name. You created this name in [LINK TO SOMEWHERE I DON'T KNOW WHERE IT IS](LINKY-LINK).
+1. In the **Direction of traffic** field, select **Ingress**.
+1. In the **Action on match** field, select **Allow**.
+1. In the **Source IP ranges** field, enter `0.0.0.0/0`.
+1. In the **Protocols and ports** field, choose **Specified protocols and ports** and enter the port number you specified in [Creating Load Balancers for PKS Clusters](#create), prepended by `tcp:`. This field will likely read either `tcp:8443` or `tcp:443`.
+1. Specify any other configuration options you require and press **Done** to complete frontend configuration.
+1. Click **Create**.
 
+##<a id=""></a>DOIN SOMETHING ELSE
 
-
-
-	</li>
-	<li>Create firewall rules for the load balancer. The following configuration parameters are required:<br/>
-		<ul>
-			<li>Select the network name value that matches the VPC network name you created earlier. This is not the default name.</li>
-			<li>Set <strong>Ingress</strong> to <code>Allow</code>.</li>
-			<li>Set <strong>Target</strong> to <code>PKS-CLUSTER-API-1</code>, which you defined in Step 1.</li>
-			<li>Set the <strong>Source</strong> to <code>0.0.0.0/0</code>.</li>
-			<li>Set the <strong>Ports</strong> to <code>tcp:8443</code>.</li>
-		</ul>
-	</li>
 	<li>Enter <code>pks list-plans</code>.</li>
 	<li>Choose a plan by ?????????????</li>
 	<li>Create a cluster on this plan. Example code follows: <code>pks create-cluster YOUR-CLUSTER-NAME --external-hostname 192.0.2.0 --plan small --num-nodes 3</code>.</li>
