Text is 98% there [#156799807]

--- a/gce-cluster-load-balancer.html.md.erb
+++ b/gce-cluster-load-balancer.html.md.erb
@@ -1,6 +1,6 @@
 ---
 title: Configure a GCE Load Balancer for PKS Clusters
-owner: PKS
+owner: PKSA
 ---
 
 A load balancer is a third party device that distributes network and application traffic across resources. You can use a load balancer to secure and facilitate access to Harbor from outside the network. 
@@ -36,6 +36,8 @@ The example below explains how to create a load balancer for your cluster and us
 
 ##<a id="firewall"></a> Creating Firewall Rules for Load Balancers
 
+Creating a firewall rule for the load balancer
+
 1. In the Google Cloud Platform sidebar menu, select **VPC Network** > **Firewall Rules**.
 1. Click **Create Firewall Rule**. The *Create a firewall rule* menu opens.
 1. Give your firewall rule a human-readable name in lower case letters. For ease of use, you may want to align this name with the name of the load balancer you created in [Creating Load Balancers for PKS Clusters](#create).
@@ -51,23 +53,33 @@ The example below explains how to create a load balancer for your cluster and us
 For this firewall rule to affect cluster API traffic, you must add the `your-pks-cluster-api-tag` network tag to the master instance of your cluster. You can only apply that tag after creating a new cluster in [LINK TO CLUSTER CONFIG DOCS](LINK). 
 
 
+##<a id="cluster-create-lb"></a>Creating a Cluster with a GCE Load Balancer
 
-Below section may want to be in a different page, perhaps in cluster setup page.
+In order to use a GCE load balancer with a cluster, you must specify that you wish to use a load balancer during cluster creation. You cannot add a load balancer to an existing cluster. 
 
-##<a id=""></a>DOIN SOMETHING ELSE
+Before completing this procedure, create a GCE load balancer and related firewall rules by following the procedures in [Configure a GCE Load Balancer for PKS Clusters](./gce-cluster-load-balancer.html).
 
 1. Log in to the PKS CLI.
-1. Enter `pks list-plans`.
-1. Choose a plan. This is the plan on which you will create a cluster, 
-1. Create a cluster on this plan and connect the load balancer you created in [Configure a GCE Load Balancer for PKS Clusters](./gce-cluster-load-balancer.html). Example code follows: <code>pks create-cluster YOUR-CLUSTER-NAME --external-hostname YOUR-LOAD-BALANCER-IP --plan small --num-nodes 3</code>.</li>
-	<li>Wait while the cluster is created. To check the creation progress, enter the following command in the BOSH CLI of the Ops Manager instance: <code>bosh -e pks task</code>.<br>
-	<p class="note"><strong>Note</strong>: This errand may run after the deployment. Depending on what other tasks you have queued, several BOSH tasks may run at this time.</li>
-	<li>Connect the Kubernetes cluster API load balancer to the master instance of the cluster. HERE'S HOW:</li>
-		<li>Search for the master VM ID by either entering <code>bosh -e pks vms</code>. Alternatively, you can log into the GCP Console and navigate to <strong>Compute Engine</strong> > <strong>VM Instances</strong>, and filter the results by <strong>Master</strong>.</li>
-		<li>Edit the pks-cluster-api-1 load balancer and add that instance in the Backend configuration.</li>
-	<li>Add the <code>your-pks-cluster-api-tag</code> network tag to the master instance. This funnels traffic through the load balancer and into the cluster.</li>
+2. Enter `pks list-plans`.
+3. Choose a plan. This is the plan on which you will create a cluster with a GCE load balancer.
+<p class="note"><strong>Note</strong>: You must have already created a GCE load balancer before continuing this procedure.</p>
+4. Create a cluster on this plan and connect the load balancer you created in [Configure a GCE Load Balancer for PKS Clusters](./gce-cluster-load-balancer.html). Example code follows: `pks create-cluster YOUR-CLUSTER-NAME --external-hostname YOUR-LOAD-BALANCER-IP --plan small --num-nodes 3`.
+4. Wait while the cluster is created. To check the creation progress, enter the following command in the BOSH CLI of the Ops Manager instance: `bosh -e pks task`.
+<p class="note"><strong>Note</strong>: This errand may run after the deployment. Depending on what other tasks you have queued, several BOSH tasks may run at this time.
 
-	compute engine > vm instances > filter by master or search for instance name > click name of instance > edit > network tags > enter tag name, hit enter > save
+##<a id="lb-connect"></a> Connecting a GCE Load Balancer to a Cluster
 
+Once you have created a new cluster with a load balancer, you must connect the load balancer to the master instance of the cluster. This ensures that traffic is distributed when accessing the cluster, and that any firewall rules you created take effect.
+
+1. Search for the master VM ID by either entering `bosh -e pks vms` or logging into the GCP Console and navigating to **Compute Engine** > **VM Instances**, and searching for the master instance there.
+1. In Google Compute Engine, navigate to **Network services** > **Load balancing**. 
+1. Click the name of the load balancer you created in the [Creating Load Balancers for PKS Clusters](gce-cluster-load-balancer.html/#create) section of *Configure a GCE Load Balancer for PKS Clusters*. The *Load balancer details* screen opens.
+1. Click **Edit**.
+1. In the *Backend configuration* panel, add the ???????????.
+1. In the Google Compute Engine, navigate to **VM Instances** and search for the master instance.
+1. Click the name of the master instance.
+1. Click **Edit**.
+1. In the *Network tags* section, add the `your-pks-cluster-api-tag` network tag. This funnels traffic through the load balancer and into the cluster.
+1. Click **Save**.
 
 Use IP of LB on PKS CLI to tell PKS to include LB IP as a trusted IP, which funnels traffic through the LB and across the cluster.
