Moves some content around, text on this one is nearly done [#156799807]

--- a/create-cluster.html.md.erb
+++ b/create-cluster.html.md.erb
@@ -75,4 +75,35 @@ See [Retrieve Cluster Credentials and Configuration](cluster-credentials.html) f
 
 1. Run `kubectl cluster-info` to confirm you can access your cluster using the Kubernetes CLI.
 
+##<a id="cluster-create-lb"></a>Creating a Cluster with a GCE Load Balancer
+
+In order to use a GCE load balancer with a cluster, you must specify that you wish to use a load balancer during cluster creation. You cannot add a load balancer to an existing cluster. 
+
+Before completing this procedure, create a GCE load balancer and related firewall rules by following the procedures in [Configure a GCE Load Balancer for PKS Clusters](./gce-cluster-load-balancer.html).
+
+1. Log in to the PKS CLI.
+2. Enter `pks list-plans`.
+3. Choose a plan. This is the plan on which you will create a cluster with a GCE load balancer.
+<p class="note"><strong>Note</strong>: You must have already created a GCE load balancer before continuing this procedure.</p>
+4. Create a cluster on this plan and connect the load balancer you created in [Configure a GCE Load Balancer for PKS Clusters](./gce-cluster-load-balancer.html). Example code follows: `pks create-cluster YOUR-CLUSTER-NAME --external-hostname YOUR-LOAD-BALANCER-IP --plan small --num-nodes 3`.
+4. Wait while the cluster is created. To check the creation progress, enter the following command in the BOSH CLI of the Ops Manager instance: `bosh -e pks task`.
+<p class="note"><strong>Note</strong>: This errand may run after the deployment. Depending on what other tasks you have queued, several BOSH tasks may run at this time.
+
+##<a id="lb-connect"></a> Connecting a GCE Load Balancer to a Cluster
+
+Once you have created a new cluster with a load balancer, you must connect the load balancer to the master instance of the cluster. This ensures that traffic is distributed when accessing the cluster, and that any firewall rules you created take effect.
+
+1. Search for the master VM ID by either entering `bosh -e pks vms` or logging into the GCP Console and navigating to **Compute Engine** > **VM Instances**, and searching for the master instance there.
+1. In Google Compute Engine, navigate to **Network services** > **Load balancing**. 
+1. Click the name of the load balancer you created in the [Creating Load Balancers for PKS Clusters](gce-cluster-load-balancer.html/#create) section of *Configure a GCE Load Balancer for PKS Clusters*. The *Load balancer details* screen opens.
+1. Click **Edit**.
+1. In the *Backend configuration* panel, add the ???????????.
+1. In the Google Compute Engine, navigate to **VM Instances** and search for the master instance.
+1. Click the name of the master instance.
+1. Click **Edit**.
+1. In the *Network tags* section, add the `your-pks-cluster-api-tag` network tag. This funnels traffic through the load balancer and into the cluster.
+1. Click **Save**.
+
+##<a id="next"></a> Next Steps
+
 See [Managing PKS](managing.html) for information about checking cluster health and viewing cluster logs.
