--- a/aws-om-config.html.md.erb
+++ b/aws-om-config.html.md.erb
@@ -128,6 +128,7 @@ delimited)** field, separated by a comma: `0.amazon.pool.ntp.org,1.amazon.pool.n
 1. Select the **Enable VM Resurrector Plugin** checkbox to enable the Ops Manager Resurrector functionality.
 
 1. Select **Enable Post Deploy Scripts** to run a post-deploy script after deployment. This script allows the job to execute additional commands against a deployment. This setting is mandatory for installing PKS.
+  <p class="note"><strong>Note</strong>: You must enable post-deploy scripts to install PKS.</p>
 
 1. Select **Recreate all VMs** to force BOSH to recreate all VMs on the next deploy. This process does not destroy any persistent disk data.
 
