--- a/installing-pks.html.md.erb
+++ b/installing-pks.html.md.erb
@@ -92,7 +92,7 @@ To configure the **Usage Data** pane:
 1. Click **Save**.
 
 <p class="note"><strong>Note:</strong> 
-  If you choose to join the CEIP and Insights Program for PKS, open your firewall to allow outgoing access on port 443 to the following url: https://vcsa.vmware.com/ph-prd.
+  If you choose to join the CEIP and Insights Program for PKS, open your firewall to allow outgoing access on port 443 to the following URL: https://vcsa.vmware.com/ph-prd.
 </p>
 
 ###<a id='plans'></a> Plans
