--- a/installing-pks.html.md.erb
+++ b/installing-pks.html.md.erb
@@ -78,7 +78,14 @@ For example, `api.pks.example.com`.
 
 ###<a id='usage'></a> Usage Data
 
-You have the option of participating in VMware’s Customer Experience Improvement Program (CEIP) and Pivotal's Insights Program, which provides VMware and Pivotal with information that enables the companies to improve their products and services, fix problems, and advise you on how best to deploy and use our products.
+VMware’s Customer Experience Improvement Program (“CEIP”) and the Pivotal Insights Program
+(“Insights”) provides VMware and Pivotal with information that enables the companies to improve their
+products and services, fix problems, and advise you on how best to deploy and use our products.
+As part of the CEIP and Insights, VMware and Pivotal collect technical information about your
+organization’s use of the Pivotal Container Service (“PKS”) on a regular basis.
+Since PKS is jointly developed and sold by VMware and Pivotal, we will share this information with one
+another.
+Information collected under CEIP or Insights does not personally identify any individual.
 
 Regardless of your selection in the **Usage Data** pane, a small amount of data is sent from Cloud Foundry Container Runtime (CFCR) to the PKS tile. However, that data is not shared externally. 
 
