draft of steps [#158166330]

--- a/upgrade-pks.html.md.erb
+++ b/upgrade-pks.html.md.erb
@@ -24,7 +24,14 @@ Scale up your cluster by running `pks-resize` or create a cluster using a larger
 
 To prevent workload downtime during a cluster upgrade, Pivotal recommends running your workload on at least three worker VMs, using multiple replicas of your workloads spread across those VMs. For more information, see [Maintain Workload Uptime](maintain-uptime.html).
 
-## <a id="upgrade-tile"></a>Upgrade the PKS Tile
+## <a id="upgrade-opsman"></a> Step 1: Upgrade Ops Manager
+
+PKS 1.1 requires Ops Manager v2.0 or Ops Manager v2.1. 
+
+To upgrade to the required Ops Manager version, follow the procedure detailed in:
+[Upgrade Ops Manager and Installed Products to v2.1](https://docs.pivotal.io/pivotalcf/2-1/customizing/upgrading-pcf.html#upgrade_ops) or [Upgrade Ops Manager and Installed Products to v2.0](https://docs.pivotal.io/pivotalcf/2-0/customizing/upgrading-pcf.html#upgrade_ops).
+
+## <a id="upgrade-tile"></a> Step 2: Upgrade the PKS Tile
 
 To upgrade PKS, you follow the same Ops Manager process that you use to install the service for the first time. 
 Your configuration settings migrate to the new version automatically. To perform an upgrade:
@@ -69,6 +76,15 @@ Read this section if:
 
 + You are experiencing a service interruption and are wondering why.
 + You are planning to update or change a Kubernetes cluster and want to know if it might cause a service interruption.
+
+## <a id="upgrade-nsxt"></a>Step 3: Upgrade NSX-T (Optional)
+
+If you are deploying PKS on vSphere with NSX-T integration, NSX-T v2.1 is required. 
+
+## <a id="upgrade-vcenter"></a>Step 4: Upgrade Upgrade (Optional)
+
+If you are deploying PKS on vSphere, consult [vSphere Version Requirements
+](vsphere-requirements.html#pks-with-vsphere) and upgrade vSphere if necessary.  
 
 ### <a id='service-update'></a>Stemcell or Service Upgrade
 
