additional updates to upgrade page [#158166330]

--- a/upgrade-pks.html.md.erb
+++ b/upgrade-pks.html.md.erb
@@ -28,7 +28,7 @@ To prevent workload downtime during a cluster upgrade, Pivotal recommends runnin
 
 PKS 1.1 requires Ops Manager v2.0 or Ops Manager v2.1. 
 
-To upgrade to the required Ops Manager version, follow the procedure detailed in:
+To upgrade to a required Ops Manager version, follow the procedure detailed in:
 [Upgrade Ops Manager and Installed Products to v2.1](https://docs.pivotal.io/pivotalcf/2-1/customizing/upgrading-pcf.html#upgrade_ops) or [Upgrade Ops Manager and Installed Products to v2.0](https://docs.pivotal.io/pivotalcf/2-0/customizing/upgrading-pcf.html#upgrade_ops).
 
 ## <a id="upgrade-tile"></a> Step 2: Upgrade the PKS Tile
@@ -81,7 +81,19 @@ Read this section if:
 
 If you are deploying PKS on vSphere with NSX-T integration, NSX-T v2.1 is required. 
 
-## <a id="upgrade-vcenter"></a>Step 4: Upgrade Upgrade (Optional)
+To upgrade the NSX-T tile:
+
+1. Review the release notes for VMware NSX-T Container Plug-in for PCF from [Pivotal Network](https://network.pivotal.io/products/vmware-nsx-t/).
+
+1. Download VMware NSX-T Container Plug-in v2.1 from [Pivotal Network](https://network.pivotal.io/products/vmware-nsx-t/).
+
+1. Navigate to the Ops Manager Installation Dashboard and click **Import a Product** to upload the product file.
+
+1. Under the **Import a Product** button, click **+** next to **VMware NSX-T Container Plug-in for PCF**. This adds the tile to your staging area.
+
+1. Click the newly-added **VMware NSX-T Container Plug-in for PCF** tile.
+
+## <a id="upgrade-vcenter"></a>Step 4: Upgrade vCenter (Optional)
 
 If you are deploying PKS on vSphere, consult [vSphere Version Requirements
 ](vsphere-requirements.html#pks-with-vsphere) and upgrade vSphere if necessary.  
