--- a/upgrade-pks.html.md.erb
+++ b/upgrade-pks.html.md.erb
@@ -31,6 +31,8 @@ PKS 1.1 requires Ops Manager v2.0 or Ops Manager v2.1.
 To upgrade to a required Ops Manager version, follow the procedure detailed in:
 [Upgrade Ops Manager and Installed Products to v2.1](https://docs.pivotal.io/pivotalcf/2-1/customizing/upgrading-pcf.html#upgrade_ops) or [Upgrade Ops Manager and Installed Products to v2.0](https://docs.pivotal.io/pivotalcf/2-0/customizing/upgrading-pcf.html#upgrade_ops).
 
+<%= partial 'add-clusters-workloads' %>
+
 ## <a id="upgrade-tile"></a> Step 2: Upgrade the PKS Tile
 
 To upgrade PKS, you follow the same Ops Manager process that you use to install the service for the first time. 
@@ -61,6 +63,8 @@ Your configuration settings migrate to the new version automatically. To perform
 If you changed **Post-Deploy Errands**, confirm that the **Post-Deploy Errands** setting matches the configuration you set in the previous step.
 
 1. Click **Apply Changes**.
+
+<%= partial 'add-clusters-workloads' %>
 
 ## <a id="upgrade-instances"></a>Upgrade Kubernetes Clusters
 
@@ -93,6 +97,8 @@ To upgrade the NSX-T tile:
 
 1. Click the newly-added **VMware NSX-T Container Plug-in for PCF** tile.
 
+<%= partial 'add-clusters-workloads' %>
+
 ## <a id="upgrade-vcenter"></a>Step 4: Upgrade vCenter (Optional)
 
 If you are deploying PKS on vSphere, consult [vSphere Version Requirements
@@ -107,3 +113,5 @@ An operator updates a stemcell version or the PKS tile version.
 
 - <strong>Impact:</strong> Workloads running on single node clusters experience downtime.
   - <strong>Required Actions:</strong> None. If the update deploys successfully, workloads resume automatically. For more information, see [Maintain Workload Uptime](maintain-uptime.html#upgrades).
+
+<%= partial 'add-clusters-workloads' %>
